--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ description = "Source text parsing, lexing, and AST related functionality for De
 all-features = true
 
 [features]
+default = ["sync"]
 bundler = ["swc_bundler", "swc_ecma_transforms_optimization", "swc_graph_analyzer"]
 cjs = ["utils", "visit"]
 codegen = ["swc_ecma_codegen", "swc_ecma_codegen_macros", "swc_macros_common"]
@@ -29,6 +30,7 @@ typescript = ["transforms", "swc_ecma_transforms_typescript"]
 utils = ["swc_ecma_utils"]
 view = ["dprint-swc-ext/view"]
 visit = ["swc_ecma_visit", "swc_visit", "swc_visit_macros", "swc_macros_common"]
+sync = ["swc_common/concurrent"]
 
 [dependencies]
 base64 = { version = "0.21.6", optional = true }
